feat(progress): Add progress indicator and poll every 500ms for progress

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,15 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
+        <androidx.fragment.app.FragmentContainerView
+            android:id="@+id/ftPlayer"
+            android:name="com.psybm7.mp3player.fragments.PlayerFragment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rvMediaList"
             android:layout_width="0dp"
