feat(action): Link up Play/Pause button

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
             android:name="com.psybm7.mp3player.fragments.PlayerFragment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
