--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -18,6 +18,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#66000000"
+        android:clickable="true"
         android:orientation="vertical"
         tools:context=".fragments.PlayerFragment">
 
@@ -34,6 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="15dp"
+            android:clickable="true"
             android:gravity="center_vertical"
             android:orientation="horizontal">
 
@@ -52,7 +54,9 @@
                 android:id="@+id/btPlayerAction"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:clickable="true"
                 android:foreground="@android:drawable/ic_media_play"
+                android:padding="10dp"
                 app:cornerRadius="50dp"
                 tools:ignore="SpeakableTextPresentCheck" />
         </LinearLayout>
